[metadata]
name = astool
version = 1.2.4.5
description = All Stars Utility Toolkit

[options]
zip_safe = False
include_package_data = True
packages = astool, astool_extra
install_requires =
    cryptography < 4.0.0
    requests < 3.0.0
    plac < 2.0.0
    typing-extensions >= 4.3.0; python_version < "3.8"

[options.package_data]
astool = ex_bootstrap_script/*.json

[options.extras_require]
async_pkg = aiohttp < 4.0.0
